Remove YangStmtMapping.{STATUS,UNITS}
Migrate statement definitions to {Status,Units}Statement.

JIRA: YANGTOOLS-1739
Change-Id: Idf02fff73aa08de6d5a2f4c7acdc72bc45d3970d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>